# internal/api/handlers/user.go
@@ -28,9 +28,6 @@ func NewUserHandler(userService *services.UserService) *UserHandler {
 // @Success 201 {object} dto.CreateUserResponse
 // @Router /users/register [post]
 // @Param user body dto.CreateUserRequest true "User to create"
-// @Response 400 {object} httperrors.HTTPValidationError
-// @Response 409 {object} httperrors.HTTPError
-// @Response 500 {object} httperrors.HTTPError
 func (h *UserHandler) CreateUser(c *gin.Context) {
 	var req dto.CreateUserRequest
 	if ok := utils.BindJSONAndValidate(c, &req, validation.CreateUserValidationMessages()); !ok {
@@ -59,9 +56,6 @@ func (h *UserHandler) CreateUser(c *gin.Context) {
 // @Success 200 {object} dto.LoginResponse
 // @Router /users/login [post]
 // @Param user body dto.LoginRequest true "User to login"
-// @Response 400 {object} httperrors.HTTPValidationError
-// @Response 409 {object} httperrors.HTTPError
-// @Response 500 {object} httperrors.HTTPError
 func (h *UserHandler) Login(c *gin.Context) {
 	var req dto.LoginRequest
 	if ok := utils.BindJSONAndValidate(c, &req, validation.LoginValidationMessages()); !ok {
@@ -81,17 +75,59 @@ func (h *UserHandler) Login(c *gin.Context) {
 	c.JSON(http.StatusOK, user)
 }
 
+// @Summary Refresh a token
+// @Description Refreshes a token
+// @Tags API User
+// @Accept json
+// @Produce json
+// @Success 200 {object} dto.RefreshResponse
+// @Router /users/refresh [post]
+// @Param user body dto.RefreshRequest true "User to refresh"
+func (h *UserHandler) Refresh(c *gin.Context) {
+	var req dto.RefreshRequest
+	if ok := utils.BindJSONAndValidate(c, &req, validation.RefreshValidationMessages()); !ok {
+		return
+	}
+	res, err := h.UserService.Refresh(req)
+	if err != nil {
+		if errors.Is(err, utils.ErrTokenExpired) {
+			httperrors.ErrTokenExpired.Write(c)
+		} else {
+			c.AbortWithStatus(http.StatusUnauthorized)
+		}
+	}
+	c.JSON(http.StatusOK, res)
+}
+
+// @Summary Logout a user
+// @Description Logs out a user
+// @Tags API User
+// @Accept json
+// @Produce json
+// @Success 200 {object} dto.LogoutResponse
+// @Router /users/logout [post]
+// @Param user body dto.LogoutRequest true "User to logout"
+func (h *UserHandler) Logout(c *gin.Context) {
+	var req dto.LogoutRequest
+	if ok := utils.BindJSONAndValidate(c, &req, validation.LogoutValidationMessages()); !ok {
+		return
+	}
+	res, err := h.UserService.Logout(req)
+	if err != nil {
+		httperrors.ErrInternalServerError.Write(c)
+	}
+	c.JSON(http.StatusOK, res)
+}
+
 // @Summary Set claims for a user
 // @Description Sets claims for a user
 // @Tags API User
 // @Accept json
 // @Produce json
+// @Security BearerAuth
 // @Success 200 {object} dto.SetClaimsResponse
 // @Router /users/claims [post]
 // @Param user body dto.SetClaimsRequest true "User to set claims for"
-// @Response 400 {object} httperrors.HTTPValidationError
-// @Response 409 {object} httperrors.HTTPError
-// @Response 500 {object} httperrors.HTTPError
 func (h *UserHandler) SetClaims(c *gin.Context) {
 	var req dto.SetClaimsRequest
 	if ok := utils.BindJSONAndValidate(c, &req, validation.SetClaimsValidationMessages()); !ok {
